Last Update Level 2.ipynb

--- a/Deep Learning/Level2/210302(Level 2).ipynb
+++ b/Deep Learning/Level2/210302(Level 2).ipynb
@@ -1442,6 +1442,8 @@
   {
    "source": [
     "## Check\n",
+    "a = square(x) 구문에서 a 값이 같은 메모리로 y 안에서 연산되므로 add_func 처리를 하지 않게 되면 a 값에 대해 func이 한 번 더 처리되게 되어 값이 64.0이 아닌 128.0이 나오게 됨    \n",
+    "\n",
     "![Check](Log.png)"
    ],
    "cell_type": "markdown",
