--- a/Deep Learning/Level4/Level 4.ipynb
+++ b/Deep Learning/Level4/Level 4.ipynb
@@ -1850,6 +1850,405 @@
    "metadata": {}
   },
   {
+   "source": [
+    "Parameter 클래스 구현"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# myPackage/core_complex.py\n",
+    "class Parameter(Variable):\n",
+    "    \"\"\"\n",
+    "    입력 파라미터를 관리하는 클래스\n",
+    "    \"\"\"\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# myPackage/layers.py\n",
+    "from myPackage.core_complex import Parameter\n",
+    "import weakref\n",
+    "\n",
+    "class Layer:\n",
+    "    \"\"\"\n",
+    "    Layer class\n",
+    "    -----------\n",
+    "    input, hidden, output layer에 대한 기반클래스\n",
+    "\n",
+    "    Args\n",
+    "    ----\n",
+    "    name: Layer's name.\n",
+    "    value: Layer's value is put in name's attritube.\n",
+    "    inputs: This parameter means layer's input data.\n",
+    "\n",
+    "    Method\n",
+    "    ------\n",
+    "    __setattr__: Get parameter(name, value) and check a value's type in Parameter instance. Then, set attribute value about name.\n",
+    "    __call__: Make callable function instance with inputs value(get variable argument)(This method use weakref.ref for help to circular reference.).\n",
+    "    forward: It will be necessary method from derived class.\n",
+    "    params: Yield a layer instances value using iterator.\n",
+    "    cleargrad: Clear all value's gradient.\n",
+    "    \"\"\"\n",
+    "    def __init__(self):\n",
+    "        self._params = set()\n",
+    "\n",
+    "    def __setattr__(self, name, value):\n",
+    "        if isinstance(value, Parameter):\n",
+    "            self._params.add(name)\n",
+    "        super().__setattr__(name, value)\n",
+    "\n",
+    "    def __call__(self, *inputs):\n",
+    "        outputs = self.forward(*inputs)\n",
+    "        if not isinstance(outputs, tuple):\n",
+    "            outputs = (outputs,)\n",
+    "        self.inputs = [weakref.ref(x) for x in inputs]\n",
+    "        self.outputs = [weakref.ref(y) for y in outputs]\n",
+    "        return outputs if len(outputs) > 1 else outputs[0]\n",
+    "\n",
+    "    def forward(self, inputs):\n",
+    "        raise NotImplementedError()\n",
+    "\n",
+    "    def params(self):\n",
+    "        for name in self._params:\n",
+    "            yield self.__dict__[name]\n",
+    "        \n",
+    "    def cleargrads(self):\n",
+    "        for param in self.params():\n",
+    "            param.cleargrad()"
+   ]
+  },
+  {
+   "source": [
+    "return의 경우 처리를 종료하고 값을 반환하는 형식.  \n",
+    "yield의 경우 처리를 '일시 중지'하고 값을 반환하는 형식."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(1, '123')\n(2, '234')\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = {1: '123', 2: '234'}\n",
+    "\n",
+    "def temp():\n",
+    "    for x, y in test.items():\n",
+    "        yield (x, y)\n",
+    "\n",
+    "for i in temp():\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(1, '123')\n(2, '234')\n"
+     ]
+    }
+   ],
+   "source": [
+    "temptemp = temp()\n",
+    "print(next(temptemp))\n",
+    "print(next(temptemp))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import myPackage.functions as F\n",
+    "from myPackage.core_complex import Parameter\n",
+    "\n",
+    "class Linear(Layer):\n",
+    "    \"\"\"\n",
+    "    Linear Class\n",
+    "    \n",
+    "    Args\n",
+    "    ----\n",
+    "    in_size, out_size: input array's size, output array's size\n",
+    "    nobias: Flag select to use bias or not.\n",
+    "\n",
+    "    Method\n",
+    "    ------\n",
+    "    __init__: Initialize the weight ndarray and set dtype. Then according to nobias config, self.b is decided from config.\n",
+    "    forward: Work linear forward propagation.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, in_size, out_size, nobias=False, dtype=np.float32):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        I, O = in_size, out_size\n",
+    "        W_data = np.random.randn(I, O).astype(dtype) * np.sqrt(1 / I)\n",
+    "        self.W = Parameter(W_data, name='W')\n",
+    "        if nobias:\n",
+    "            self.b = None\n",
+    "        else:\n",
+    "            self.b = Parameter(np.zeros(0, dtype=dtype), name='b')\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        y = F.linear(x, self.W, self.b)\n",
+    "        return y"
+   ]
+  },
+  {
+   "source": [
+    "현재 Linear class의 경우 가중치가 초기화 당시에 결정되도록 설정되어 있으나 이 가중치 W를  새성하는 시점을 늦춰서 입력 크기를 자동으로 결정하도록 설정할 수 있음"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Linear(Layer):\n",
+    "    \"\"\"\n",
+    "    Linear Class\n",
+    "    \n",
+    "    Args\n",
+    "    ----\n",
+    "    in_size, out_size: input array's size, output array's size\n",
+    "    nobias: Flag select to use bias or not.\n",
+    "\n",
+    "    Method\n",
+    "    ------\n",
+    "    __init__: Set argument from the paramter. Then according to nobias config, self.b is decided from config.\n",
+    "    _init_W: Initialize the weight ndarray and set dtype.\n",
+    "    forward: Work linear forward propagation.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, out_size, nobias=False, dtype=np.float32, in_size=None):\n",
+    "        super().__init__()\n",
+    "        self.in_size = in_size\n",
+    "        self.out_size = out_size\n",
+    "        self.dtype = dtype\n",
+    "\n",
+    "        self.W = Parameter(None, name='W')\n",
+    "        if self.in_size is not None: # in_size가 정의되지 않은 경우 나중으로 연기\n",
+    "            self._init_W()\n",
+    "\n",
+    "        if nobias:\n",
+    "            self.b = None\n",
+    "        else:\n",
+    "            self.b = Parameter(np.zeros(out_size, dtype=dtype), name='b')\n",
+    "\n",
+    "\n",
+    "    def _init_W(self):\n",
+    "        I, O = self.in_size, self.out_size\n",
+    "        W_data = np.random.randn(I, O).astype(self.dtype) * np.sqrt(1 / I)\n",
+    "        self.W.data = W_data\n",
+    "\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # 데이터를 흘려보내는 시점에 가중치를 초기화\n",
+    "        if self.W.data is None:\n",
+    "            self.in_size = x.shape[1]\n",
+    "            self._init_W()\n",
+    "\n",
+    "        y = F.linear(x, self.W, self.b)\n",
+    "        return y"
+   ]
+  },
+  {
+   "source": [
+    "## Layer를 이용한 신경망 구현"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from myPackage import Variable\n",
+    "import myPackage.functions as F\n",
+    "import myPackage.layers as L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(0)\n",
+    "x = np.random.rand(100, 1)\n",
+    "y = np.sin(2 * np.pi * x) + np.random.rand(100, 1)\n",
+    "\n",
+    "l1 = L.Linear(10)\n",
+    "l2 = L.Linear(1)\n",
+    "\n",
+    "def predict(x):\n",
+    "    y = l1(x)\n",
+    "    y = F.sigmoid(y)\n",
+    "    y = l2(y)\n",
+    "\n",
+    "lr = 0.2\n",
+    "iters = 10000\n",
+    "\n",
+    "for i in range(iters):\n",
+    "    y_pred = predict(x)\n",
+    "    loss = F.mean_squared_error(y, y_pred)\n",
+    "\n",
+    "        l1.cleargrads()\n",
+    "    l2.cleargrads()\n",
+    "    loss.backward()\n",
+    "\n",
+    "    for l in [l1, l2]:\n",
+    "        for p in l.params():\n",
+    "            p.data -= lr * p.grad.data\n",
+    "    if i % 1000 == 0:\n",
+    "        print(loss)"
+   ]
+  },
+  {
+   "source": [
+    "## 계층을 모아두는 계층"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "Layer 클래스 확장"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Layer:\n",
+    "    def __init__(self):\n",
+    "        self._params = set()\n",
+    "\n",
+    "    def __setattr__(self, name, value):\n",
+    "        if isinstance(value, (Parameter, Layer)): # Layer 추가\n",
+    "            self._params.add(name)\n",
+    "        super().__setattr__(name, value)\n",
+    "\n",
+    "    def params(self):\n",
+    "        for name in self._params:\n",
+    "            obj = self.__dict__[name]\n",
+    "\n",
+    "            if isinstance(obj, Layer): # Layer인 경우 함수를 메서드를 재호출하여 내부 parameter yield\n",
+    "                yield from obj.params()\n",
+    "            else:\n",
+    "                yield obj"
+   ]
+  },
+  {
+   "source": [
+    "yield를 사용한 함수를 제너레이터(generator)라고 하며, 제너레이터를 사용하여 또 다른 제너레이터를 생성하고자 할 때는 yield from을 사용해야 한다."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### Layer 클래스 상속 후 모델 전체를 하나의 클래스로 정의"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TwoLayerNet(Layer):\n",
+    "    def __init__(self, hidden_size, out_size):\n",
+    "        super().__init__()\n",
+    "        self.l1 = L.Linear(hidden_size)\n",
+    "        self.l2 = L.Linear(out_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        y = F.sigmoid(self.l1(x))\n",
+    "        y = self.l2(y)\n",
+    "        return y"
+   ]
+  },
+  {
+   "source": [
+    "## Model 클래스"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# myPackage/models.py\n",
+    "from myPackage import Layer\n",
+    "from myPackage import utils\n",
+    "\n",
+    "class Model(Layer):\n",
+    "    def plot(self, *inputs, to_file='model.png'):\n",
+    "        y = self.forward(*inputs)\n",
+    "        return utils.plot_dot_graph(y, verbose=True, to_file=to_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import myPackage.layers as L\n",
+    "import myPackage.functions as F\n",
+    "from myPackage import Variable, Model\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "x = np.random.rand(100, 1)\n",
+    "y = np.sin(2 * np.pi * x) + np.random.rand(100, 1)\n",
+    "\n",
+    "lr = 0.2\n",
+    "max_iter = 10000\n",
+    "hidden_size = 10"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
