--- a/Deep Learning/Level4/Level 4.ipynb
+++ b/Deep Learning/Level4/Level 4.ipynb
@@ -15,12 +15,8 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.3 64-bit (conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
-    }
-   }
+   "display_name": "Python 3",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -52,7 +48,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "__file__ in globals at utils.py\n"
+      "__file__ in globals at layers.py\n__file__ in globals at utils.py\n__file__ in globals at models.py\n"
      ]
     }
    ],
@@ -64,14 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "variable(0.8414709848078965) from class's __repr__\n"
+      "variable(0.8414709848078965)\n"
      ]
     }
    ],
@@ -2088,9 +2084,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "__file__ in globals at layers.py\n__file__ in globals at utils.py\n__file__ in globals at models.py\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from myPackage import Variable\n",
@@ -2100,9 +2104,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "variable(0.8165178492839196)\n",
+      "variable(0.24990280802148895)\n",
+      "variable(0.24609876581126014)\n",
+      "variable(0.23721590814318072)\n",
+      "variable(0.20793216413350174)\n",
+      "variable(0.12311905720649353)\n",
+      "variable(0.07888166506355153)\n",
+      "variable(0.07655073683421634)\n",
+      "variable(0.07637803086238225)\n",
+      "variable(0.07618764131185568)\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(0)\n",
     "x = np.random.rand(100, 1)\n",
@@ -2115,6 +2138,7 @@
     "    y = l1(x)\n",
     "    y = F.sigmoid(y)\n",
     "    y = l2(y)\n",
+    "    return y\n",
     "\n",
     "lr = 0.2\n",
     "iters = 10000\n",
@@ -2123,7 +2147,7 @@
     "    y_pred = predict(x)\n",
     "    loss = F.mean_squared_error(y, y_pred)\n",
     "\n",
-    "        l1.cleargrads()\n",
+    "    l1.cleargrads()\n",
     "    l2.cleargrads()\n",
     "    loss.backward()\n",
     "\n",
@@ -2230,14 +2254,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "variable(0.8165178492839196)\n",
+      "variable(0.24990280802148895)\n",
+      "variable(0.24609876581126014)\n",
+      "variable(0.23721590814318072)\n",
+      "variable(0.20793216413350174)\n",
+      "variable(0.12311905720649353)\n",
+      "variable(0.07888166506355153)\n",
+      "variable(0.07655073683421634)\n",
+      "variable(0.07637803086238225)\n",
+      "variable(0.07618764131185568)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import myPackage.layers as L\n",
     "import myPackage.functions as F\n",
-    "from myPackage import Variable, Model\n",
+    "from myPackage import Variable, Model, Layer\n",
     "\n",
     "np.random.seed(0)\n",
     "x = np.random.rand(100, 1)\n",
@@ -2245,7 +2286,307 @@
     "\n",
     "lr = 0.2\n",
     "max_iter = 10000\n",
-    "hidden_size = 10"
+    "hidden_size = 10\n",
+    "\n",
+    "class TwoLayerNet(Layer):\n",
+    "    def __init__(self, hidden_size, out_size):\n",
+    "        super().__init__()\n",
+    "        self.l1 = L.Linear(hidden_size)\n",
+    "        self.l2 = L.Linear(out_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        y = F.sigmoid(self.l1(x))\n",
+    "        y = self.l2(y)\n",
+    "        return y\n",
+    "\n",
+    "model = TwoLayerNet(hidden_size, 1)\n",
+    "\n",
+    "for i in range(max_iter):\n",
+    "    y_pred = model(x)\n",
+    "    loss = F.mean_squared_error(y, y_pred)\n",
+    "    \n",
+    "    model.cleargrads()\n",
+    "    loss.backward()\n",
+    "\n",
+    "    for p in model.params():\n",
+    "        p.data -= lr * p.grad.data\n",
+    "    if i % 1000 == 0:\n",
+    "        print(loss)"
+   ]
+  },
+  {
+   "source": [
+    "## Optimizer로 수행하는 매개변수 갱신"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Optimizer:\n",
+    "    \"\"\"\n",
+    "    Optimizer class\n",
+    "    \n",
+    "    Args\n",
+    "    ----\n",
+    "    target: This is optimized by hooks(func).\n",
+    "    hooks: There is option list including preprocessing params.\n",
+    "\n",
+    "    Methods\n",
+    "    -------\n",
+    "    setup: This exists for update target.\n",
+    "    update: This exists for update params.\n",
+    "    \"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.target = None\n",
+    "        self.hooks = []\n",
+    "\n",
+    "    def setup(self, target):\n",
+    "        self.target = target\n",
+    "        return self\n",
+    "\n",
+    "    def update(self):\n",
+    "        # None 이외의 매개변수 리스트에 모으기\n",
+    "        params = [p for p in self.target.params() if p.grad is not None]\n",
+    "\n",
+    "        # 전처리(옵션)\n",
+    "        for f in self.hooks:\n",
+    "            f(params)\n",
+    "\n",
+    "        # 매개변수 갱신\n",
+    "        for param in params:\n",
+    "            self.update_one(param)\n",
+    "\n",
+    "    def update_one(self, param):\n",
+    "        raise NotImplementedError()\n",
+    "\n",
+    "    def add_hook(self, f):\n",
+    "        self.hooks.append(f)"
+   ]
+  },
+  {
+   "source": [
+    "### SGD 클래스 구현"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SGD(Optimizer):\n",
+    "    def __init__(self, lr=0.01):\n",
+    "        super().__init__()\n",
+    "        self.lr = lr\n",
+    "\n",
+    "    def update_one(self, param):\n",
+    "        param.data -= self.lr * param.grad.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MomentumSGD(Optimizer):\n",
+    "    def __init__(self, lr = 0.01, momentum = 0.9):\n",
+    "        super().__init__()\n",
+    "        self.lr = lr\n",
+    "        self.momentum = momentum\n",
+    "        self.vs = {}\n",
+    "\n",
+    "    def update_one(self, param):\n",
+    "        v_key = id(param)\n",
+    "        if v_key not in self.vs:\n",
+    "            self.vs[v_key] = np.zeros_like(param.data)\n",
+    "\n",
+    "            v = self.vs[v_key]\n",
+    "            v *= self.momentum\n",
+    "            v -= self.lr * param.grad.data\n",
+    "            param.data += v"
+   ]
+  },
+  {
+   "source": [
+    "## 소프트맥스 & 교차 엔트로피 오차"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### 슬라이스 조작 함수"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[0. 0. 0.]\n [1. 1. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.zeros((2, 3))\n",
+    "b = np.ones((3,))\n",
+    "slices = 1\n",
+    "\n",
+    "np.add.at(a, slices, b)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[0. 0. 0.]\n [1. 1. 1.]]\n[[0. 2. 0.]\n [1. 0. 0.]]\n[[0. 4. 0.]\n [2. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.zeros((2, 3))\n",
+    "b = 1\n",
+    "\n",
+    "slices = ([1], [1], [1]), ([0], [1], [2]) # (1, 0), (1, 1), (1, 2) 위치에 add\n",
+    "np.add.at(a, slices, b)\n",
+    "print(a)\n",
+    "\n",
+    "a = np.zeros((2, 3))\n",
+    "b = 1\n",
+    "\n",
+    "slices = ([1], [0], [0]), ([0], [1], [1]) # (1, 0), (0, 1)*2 위치에 add\n",
+    "np.add.at(a, slices, b)\n",
+    "print(a)\n",
+    "\n",
+    "slices = ([1], [0], [0]), ([0], [1], [1]) # (1, 0), (0, 1)*2 위치에 add\n",
+    "np.add.at(a, slices, b)\n",
+    "print(a) # reference 형태로 받아서 바로 반환. (복사 X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "variable([[1 2 3]\n          [1 2 3]\n          [4 5 6]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = Variable(np.array([[1, 2, 3], [4, 5, 6]]))\n",
+    "indices = np.array([0, 0, 1])\n",
+    "y = F.get_item(x, indices)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "source": [
+    "### 소프트맥스 함수"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def softmax1d(x):\n",
+    "    x = as_variable(x)\n",
+    "    y = F.exp(x)\n",
+    "    sum_y = F.sum(y)\n",
+    "    return y / sum_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# myPackage/functions.py\n",
+    "def softmax_simple(x, axis=1):\n",
+    "    x = as_variable(x)\n",
+    "    y = exp(x)\n",
+    "    sum_y = sum(y, axis=axis, keepdims=True)\n",
+    "    return y / sum_y"
+   ]
+  },
+  {
+   "source": [
+    "### 교차 엔트로피 오차"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def softmax_cross_entropy_simple(x, t):\n",
+    "    x, t = as_variable(x), as_variable(t)\n",
+    "    N = x.shape[0]\n",
+    "    p = softmax(x)\n",
+    "    p = clip(p, 1e-15, 1.0)  # To avoid log(0)\n",
+    "    log_p = log(p)\n",
+    "    tlog_p = log_p[np.arange(N), t.data]\n",
+    "    y = -1 * sum(tlog_p) / N\n",
+    "    return y"
+   ]
+  },
+  {
+   "source": [
+    "## 다중 클래스 분류"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### 스파이럴 데이터셋\n",
+    "spiral: 나선형, 소용돌이 모양"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot"
    ]
   },
   {
