--- a/Deep Learning/Level4/Level 4.ipynb
+++ b/Deep Learning/Level4/Level 4.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1958,19 +1958,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(1, '123')\n(2, '234')\n"
+      "<generator object temp at 0x000001CCFFC75EB0>\n(1, '123')\n(2, '234')\n"
      ]
     }
    ],
    "source": [
     "temptemp = temp()\n",
+    "print(temptemp)\n",
     "print(next(temptemp))\n",
     "print(next(temptemp))"
    ]
@@ -2582,11 +2583,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot"
+    "import matplotlib.pyplot as plt\n",
+    "import myPackage\n",
+    "\n",
+    "x, t = myPackage.datasets.get_spiral(train=True)\n",
+    "print(x.shape)\n",
+    "print(t.shape)\n",
+    "\n",
+    "print(x[10], t[10])\n",
+    "print(x[110], t[110])"
    ]
   },
   {
@@ -2594,7 +2603,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Plot data points of the dataset\n",
+    "N, CLS_NUM = 100, 3\n",
+    "markers = ['o', 'x', '^']\n",
+    "colors = ['orange', 'blue', 'green']\n",
+    "for i in range(len(x)):\n",
+    "    c = t[i]\n",
+    "    plt.scatter(x[i][0], x[i][1], s=25,  marker=markers[c], c=colors[c])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([1, 2])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "np.array([[1], [2]]).flatten()"
+   ]
   },
   {
    "cell_type": "code",
