--- a/Deep Learning/Level4/Level 4.ipynb
+++ b/Deep Learning/Level4/Level 4.ipynb
@@ -3150,7 +3150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3172,10 +3172,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1\n2\n3\n4\n5\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj = MyIterator(5)\n",
+    "for x in obj:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# myPackage/dataloaders.py\n",
+    "import math\n",
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "class DataLoader:\n",
+    "    \"\"\"\n",
+    "    DataLoader class\n",
+    "\n",
+    "    Args\n",
+    "    ----\n",
+    "    dataset : Dataset 인터페이스를 만족하는 인스턴스(이 말인 즉슨, __getitem__ & __len__ 메서드를 구현한 클래스로부터 생성된 인스턴스를 의미)\n",
+    "    batch_size : 배치 크기\n",
+    "    shuffle : 에포크별로 데이터셋을 뒤섞을지 여부\n",
+    "    \"\"\"\n",
+    "    def __init__(self, dataset, batch_size, shuffle=True):\n",
+    "        self.dataset = dataset\n",
+    "        self.batch_size = batch_size\n",
+    "        self.shuffle = shuffle\n",
+    "        self.data_size = len(dataset)\n",
+    "        self.max_iter = math.ceil(self.data_size / batch_size)\n",
+    "\n",
+    "        self.reset()\n",
+    "\n",
+    "    def reset(self):\n",
+    "        self.iteration = 0\n",
+    "        if self.shuffle:\n",
+    "            self.index = np.random.permutation(len(self.dataset))\n",
+    "        else:\n",
+    "            self.index = np.arange(len(self.dataset))\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        if self.iteration >= self.max_iter:\n",
+    "            self.reset()\n",
+    "            raise StopIteration\n",
+    "\n",
+    "        i, batch_size = self.iteration, self.batch_size\n",
+    "        batch_index = self.index[i * batch_size:(i + 1) * batch_size]\n",
+    "        batch = [self.dataset[i] for i in batch_index]\n",
+    "        x = np.array([example[0] for example in batch])\n",
+    "        t = np.array([example[1] for example in batch])\n",
+    "\n",
+    "        self.iteration += 1\n",
+    "        return x, t\n",
+    "\n",
+    "    def next(self):\n",
+    "        return self.__next__()"
+   ]
+  },
+  {
+   "source": [
+    "### DataLoader 사용하기"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from myPackage.datasets import Spiral\n",
+    "from myPackage import DataLoader\n",
+    "\n",
+    "batch_size = 10\n",
+    "max_epoch = 1\n",
+    "\n",
+    "train_set = Spiral(train=True)\n",
+    "test_set = Spiral(train=False)\n",
+    "train_loader = DataLoader(train_set, batch_size)\n",
+    "test_loader = DataLoader(test_set, batch_size, shuffle=False)\n",
+    "\n",
+    "for epoch in range(max_epoch):\n",
+    "    for x, t in train_loader:\n",
+    "        print(x.shape, t.shape)\n",
+    "        break\n",
+    "\n",
+    "    # 에포크 끝에서 테스트 데이터를 꺼낸다.\n",
+    "    for x, t in test_loader:\n",
+    "        print(x.shape, t.shape)\n",
+    "        break"
+   ]
   },
   {
    "cell_type": "code",
