--- a/Deep Learning/Level4/Level 4.ipynb
+++ b/Deep Learning/Level4/Level 4.ipynb
@@ -3284,6 +3284,74 @@
    ]
   },
   {
+   "source": [
+    "#### Accuracy 함수 구현"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#myPackage/functions.py\n",
+    "def accuracy(y, t):\n",
+    "    y, t = as_variable(y), as_variable(t) # Variable or ndarray instance\n",
+    "\n",
+    "    pred = y.data.argmax(axis = 1).reshape(t.shape)\n",
+    "    result = (pred == t.data)\n",
+    "    acc = result.mean()\n",
+    "    return Variable(as_array(acc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import myPackage.functions as F\n",
+    "\n",
+    "\n",
+    "y = np.array([[0.2, 0.8, 0], [0.1, 0.9, 0], [0.8, 0.1, 0.1]])\n",
+    "t = np.array([1, 2, 0])\n",
+    "acc = F.accuracy(y, t)\n",
+    "print(acc) # variable(0.6666666666666666)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[3]\n [7]]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([3, 7])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "n1 = np.array([[0,0,1,2,3], [5,6,7,0,0]])\n",
+    "print(n1.max(axis=1, keepdims=True))\n",
+    "n1.max(axis=1, keepdims=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
