--- a/Deep Learning/Level4/Level 4.ipynb
+++ b/Deep Learning/Level4/Level 4.ipynb
@@ -48,7 +48,9 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "__file__ in globals at layers.py\n__file__ in globals at utils.py\n__file__ in globals at models.py\n"
+      "__file__ in globals at layers.py\n",
+      "__file__ in globals at utils.py\n",
+      "__file__ in globals at models.py\n"
      ]
     }
    ],
