--- a/Deep Learning/Level4/Level 4.ipynb
+++ b/Deep Learning/Level4/Level 4.ipynb
@@ -48,9 +48,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "__file__ in globals at layers.py\n",
-      "__file__ in globals at utils.py\n",
-      "__file__ in globals at models.py\n"
+      "__file__ in globals at layers.py\n__file__ in globals at utils.py\n__file__ in globals at models.py\n"
      ]
     }
    ],
@@ -3354,25 +3352,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 모델 개선(MNIST)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ReLU(Function):\n",
+    "    def forward(self, x):\n",
+    "        y = np.maximum(x, 0.0)\n",
+    "        return y\n",
+    "    \n",
+    "    def backward(self, gy):\n",
+    "        x, = self.inputs\n",
+    "        mask = x.data > 0\n",
+    "        gx = gy * mask\n",
+    "        return gx\n",
+    "\n",
+    "def relu(x):\n",
+    "    return ReLU()(x)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "IndexError",
+     "evalue": "index 2 is out of bounds for axis 0 with size 2",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-b1b8f785fe59>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mtemp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m50\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mtest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtemp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mn1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: index 2 is out of bounds for axis 0 with size 2"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = np.array([[0,0,1,2,3], [5,6,7,0,0]])\n",
+    "temp = np.arange(0, 50, 10)\n",
+    "test = np.concatenate((temp, temp), axis=None).reshape(-1, 5)\n",
+    "n1[np.arange(5), test]"
+   ]
   },
   {
    "cell_type": "code",
